# Stream-Scholar-contracts

./: .gitignore  DISASTER_RECOVERY.md  PR_DESCRIPTION_ISSUES_95_93.md  PR_DESCRIPTION_MULTISIG.md  README.md  RESEARCH_GRANT_MILESTONE_ESCROW.md  SECURITY.md  docker-compose.yml  pr-description-tuition-split.md
.github/workflows/: formal-verification.yml  pipeline.yml  soroban.yml
contracts/scholar_contracts/: Cargo.toml
contracts/scholar_contracts/src/: GasEstimationService.ts  README_SDK.md  authorization_tests.rs  auto_rent.rs  dark_pool.rs  formal_verification.rs  fuzz_verification.rs  issue_batch.rs  issue_features.rs  lib.rs  perf_bench.rs  permutation_harness.rs  safe_math.rs  streamScholarSdk.ts  string_validation.rs  string_validation_tests.rs  student_profile_nft.rs  test.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
crates/claim_math/: Cargo.toml
crates/claim_math/src/: lib.rs
docs/: INSTRUCTOR_ONBOARDING_GUIDE.md  STRING_VALIDATION_REQUIREMENTS.md  WASM_SIZE_BENCHMARKING.md  course-metadata-implementation-guide.md  course-metadata-standard.json  package.json
frontend/: app.js  index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: partial_claim_invariants.rs  qf_matching_invariants.rs  rounding_invariants.rs
scripts/: README.md  check-doc-comments.sh  check-wasm-size.ps1  check-wasm-size.sh  config.example.env  deploy.ps1  deploy.sh  manage-teachers.ps1  manage-teachers.sh  setup-local.sh  test-scripts.ps1  test-scripts.sh
tools/mock-oracle/: Cargo.toml  README.md
tools/mock-oracle/src/: main.rs
(+3 files in other folders)
